--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,32 @@
 <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
-  <h1 class="text-2xl font-semibold text-gray-900">Projects</h1>
+  <h1 class="text-4xl font-bold text-gray-900">Projects</h1>
 </div>
-<div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
- 
-
+<div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8 my-4">
+  <ul role="list" class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+    <% @projects.each do |project| %>
+    <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow divide-y divide-gray-200">
+      <div class="flex-1 flex flex-col p-8">
+        <%= image_tag project.image_avatar_url, class: 'w-32 h-32 flex-shrink-0 mx-auto rounded-full' %>
+        <h3 class="mt-6 text-gray-900 text-xl font-medium"><%= project.name %></h3>
+        <dl class="mt-1 flex-grow flex flex-col justify-between">
+          <dt class="sr-only">Status</dt>
+          <dd class="mt-3">
+            <span class="px-2 py-1 text-green-800 text-xs font-medium bg-green-100 rounded-full">Minting</span>
+          </dd>
+        </dl>
+      </div>
+      <div>
+        <div class="-mt-px flex divide-x divide-gray-200">
+          <div class="w-0 flex-1 flex">
+            <a href="mailto:janecooper@example.com" class="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500">
+              <!-- Heroicon name: solid/mail -->
+              <i class="fa-duotone fa-circle-heart w-5 h-5 text-gray-400"></i>
+              <span class="ml-3">Follow</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </li>
+    <% end %>
+  </ul>
 </div>
