--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,7 +82,8 @@
                 </p>
               </div>
               <nav class="mt-5 px-2 space-y-1">
-                <%= link_to(projects_path, class: 'bg-blue-800 text-white group flex items-center px-2 py-2 text-base font-medium rounded-md') do %>
+              <!-- Active: bg-blue-800 text-white group flex items-center px-2 py-2 text-base font-medium rounded-md -->
+                <%= link_to(projects_path, class: 'text-white hover:bg-blue-600 hover:bg-opacity-75 group flex items-center px-2 py-2 text-base font-medium rounded-md') do %>
                   <i class="fa-duotone fa-album-collection mr-4 flex-shrink-0 h-6 w-6 text-blue-300"></i>
                   Projects
                 <% end %>
@@ -136,8 +137,8 @@
                 </p>
               </div>
               <nav class="mt-5 flex-1 px-2 space-y-1">
-                <!-- Current: "bg-blue-800 text-white", Default: "text-white hover:bg-blue-600 hover:bg-opacity-75" -->
-                <%= link_to(projects_path, class: 'bg-blue-800 text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md') do %>
+                <!-- Current: "bg-blue-800 text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" -->
+                <%= link_to(projects_path, class: 'text-white hover:bg-blue-600 hover:bg-opacity-75 group flex items-center px-2 py-2 text-sm font-medium rounded-md') do %>
                   <i class="fa-duotone fa-album-collection mr-4 flex-shrink-0 h-6 w-6 text-blue-300"></i>
                   Projects
                 <% end %>
