Form note about historical publish date

--- a/app/views/updates/new.html.erb
+++ b/app/views/updates/new.html.erb
@@ -74,6 +74,7 @@
           <div class="mt-1">
             <%= form.datetime_select :publish_at, {}, {class: 'shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm border-gray-300 rounded-md'} %>
           </div>
+          <p class="mt-2 text-sm text-gray-500">Select past dates to build up a historical timeline!</p>
         </div>
       </div>  
     </div>
