--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -114,11 +114,12 @@
               </nav>
             </div>
             <div class="flex-shrink-0 flex border-t border-blue-800 p-4">
-              <a href="#" class="flex-shrink-0 w-full group block">
+              <div class="flex-shrink-0 w-full group block">
                 <div class="flex items-center">
                   <button type="button" class="relative w-full items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-green-500 hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500" id="btn-connect">
                     Connect Wallet
                   </button>
+                  <div class="text-white font-bold text-lg"><span class="wallet_address"></span></div>
                   <%# <div>
                     <img class="inline-block h-9 w-9 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
                   </div>
@@ -131,7 +132,7 @@
                     </p>
                   </div> %>
                 </div>
-              </a>
+              </div>
             </div>
           </div>
         </div>
