--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -116,21 +116,21 @@
             <div class="flex-shrink-0 flex border-t border-blue-800 p-4">
               <div class="flex-shrink-0 w-full group block">
                 <div class="flex items-center">
+
                   <button type="button" class="relative w-full items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-green-500 hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500" id="btn-connect">
                     Connect Wallet
                   </button>
-                  <div class="text-white font-bold text-lg"><span class="wallet_address"></span></div>
-                  <%# <div>
-                    <img class="inline-block h-9 w-9 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+
+                  <div class="flex items-center wallet_info hidden">
+                    <div>
+                      <div class="inline-block h-9 w-9 rounded-full bg-white"></div>
+                    </div>
+                    <div class="ml-3">
+                      <p class="text-lg font-medium text-white">
+                        <span class="wallet_address"></span>
+                      </p>
+                    </div>
                   </div>
-                  <div class="ml-3">
-                    <p class="text-sm font-medium text-white">
-                      Tom Cook
-                    </p>
-                    <p class="text-xs font-medium text-blue-200 group-hover:text-white">
-                      View profile
-                    </p>
-                  </div> %>
                 </div>
               </div>
             </div>
@@ -157,5 +157,6 @@
     <script type="text/javascript" src="https://unpkg.com/web3@1.2.11/dist/web3.min.js"></script>
     <script type="text/javascript" src="https://unpkg.com/web3modal@1.9.0/dist/index.js"></script>
     <script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
+    <script src='https://unpkg.com/trianglify@^4/dist/trianglify.bundle.js'></script>
   </body>
 </html>
