--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,23 +113,19 @@
                 <% end %>
               </nav>
             </div>
-            <div class="flex-shrink-0 flex border-t border-blue-800 p-4">
+            <div data-controller="wallet" data-wallet-target="container" class="hidden flex-shrink-0 flex border-t border-blue-800 p-4">
               <div class="flex-shrink-0 w-full group block">
                 <div class="flex items-center">
 
-                  <button type="button" class="relative w-full items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-green-500 hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500" id="btn-connect">
+                  <button data-wallet-target="connectButton" data-action="click->wallet#connectWallet" type="button" class="relative w-full items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-green-500 hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
                     Connect Wallet
                   </button>
 
-                  <div class="flex items-center wallet_info hidden">
-                    <div>
-                      <div class="inline-block h-9 w-9 rounded-full bg-white"></div>
-                    </div>
-                    <div class="ml-3">
-                      <p class="text-lg font-medium text-white">
-                        <span class="wallet_address"></span>
-                      </p>
-                    </div>
+                  <div data-wallet-target="wallet" class="hidden flex items-center gap-3">
+                    <div class="h-9 w-9 rounded-full bg-white"></div>
+                    <p class="text-lg font-medium text-white">
+                      <span data-wallet-target="walletAddress"></span>
+                    </p>
                   </div>
                 </div>
               </div>
@@ -154,9 +150,9 @@
           </main>
         </div>
       </div>
-    <script type="text/javascript" src="https://unpkg.com/web3@1.2.11/dist/web3.min.js"></script>
     <script type="text/javascript" src="https://unpkg.com/web3modal@1.9.0/dist/index.js"></script>
     <script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
+    <script type="text/javascript" src="https://cdn.ethers.io/lib/ethers-5.1.umd.min.js"></script>
     <script src='https://unpkg.com/trianglify@^4/dist/trianglify.bundle.js'></script>
   </body>
 </html>
