--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,83 @@
-<div>
-  <h1 class="text-xl font-bold">Projects#show</h1>
-  <p>Find me in app/views/projects/show.html.erb</p>
-<div>
+<div class="max-w-3xl mx-auto px-4 sm:px-6 md:flex md:items-center md:justify-between md:space-x-5 lg:max-w-7xl lg:px-8">
+  <div class="flex items-center space-x-5">
+    <div class="flex-shrink-0">
+      <div class="relative">
+        <%= image_tag @project.image_avatar_url, class: 'h-16 w-16 rounded-full' %>
+        <span class="absolute inset-0 shadow-inner rounded-full" aria-hidden="true"></span>
+      </div>
+    </div>
+    <div>
+      <h1 class="text-4xl font-bold text-gray-900"><%= @project.name %></h1>
+    </div>
+  </div>
+  <div class="mt-6 flex flex-col-reverse justify-stretch space-y-4 space-y-reverse sm:flex-row-reverse sm:justify-end sm:space-x-reverse sm:space-y-0 sm:space-x-3 md:mt-0 md:flex-row md:space-x-3">
+    <div class="flex my-2">
+      <% if @project.url_opensea.present? %>
+        <%= link_to @project.url_opensea do %>
+        <i class="fa-duotone fa-sailboat h-5 w-5 bg-gray-300 p-2 text-white rounded-lg mx-1 hover:bg-blue-600"></i>
+        <% end %>
+      <% end %>
+
+      <% if @project.url_discord.present? %>
+        <%= link_to @project.url_discord do %>
+        <i class="fa-brands fa-discord h-5 w-5 bg-gray-300 p-2 text-white rounded-lg mx-1 hover:bg-indigo-500"></i>
+        <% end %>
+      <% end %>
+
+      <% if @project.url_twitter.present? %>
+        <%= link_to @project.url_twitter do %>
+        <i class="fa-brands fa-twitter h-5 w-5 bg-gray-300 p-2 text-white rounded-lg mx-1 hover:bg-blue-400"></i>
+        <% end %>
+      <% end %>
+
+      <% if @project.url_website.present? %>
+        <%= link_to @project.url_website do %>
+        <i class="fa-duotone fa-browser h-5 w-5 bg-gray-300 p-2 text-white rounded-lg mx-1 hover:bg-green-500"></i>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+<div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8 my-4">
+<% @project.updates.each do |update| %>
+<div class="mt-0 grid gap-16 pt-12">
+  <div>
+    <div>
+      <a href="#" class="inline-block">
+        <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-indigo-100 text-indigo-800">
+          <%= update.category %>
+        </span>
+      </a>
+    </div>
+    <a href="#" class="block mt-4">
+      <p class="text-xl font-semibold text-gray-900">
+        <%= update.title %>
+      </p>
+      <p class="mt-3 text-base text-gray-500">
+        <%= update.body %>
+      </p>
+    </a>
+    <div class="mt-6 flex items-center">
+      <div class="flex-shrink-0">
+        <a href="#">
+          <img class="h-10 w-10 rounded-full" src="<%= update.project.image_avatar_url %>" alt="">
+        </a>
+      </div>
+      <div class="ml-3">
+        <p class="text-sm font-medium text-gray-900">
+          <a href="#">
+            <%= update.project.name %>
+          </a>
+        </p>
+        <div class="flex space-x-1 text-sm text-gray-500">
+          <time datetime="2020-03-16">
+            <%= update.publish_at %>
+          </time>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<% end %>
+</div>
