--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -44,31 +44,25 @@
 <div class="mt-0 grid gap-16 pt-12">
   <div>
     <div>
-      <a href="#" class="inline-block">
         <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-indigo-100 text-indigo-800">
           <%= update.category %>
         </span>
-      </a>
     </div>
-    <a href="#" class="block mt-4">
+    <div class="block mt-4">
       <p class="text-xl font-semibold text-gray-900">
         <%= update.title %>
       </p>
       <p class="mt-3 text-base text-gray-500">
         <%= update.body %>
       </p>
-    </a>
+    </div>
     <div class="mt-6 flex items-center">
       <div class="flex-shrink-0">
-        <a href="#">
-          <img class="h-10 w-10 rounded-full" src="<%= update.project.image_avatar_url %>" alt="">
-        </a>
+        <%= image_tag update.project.image_avatar_url, class: 'h-10 w-10 rounded-full' %>
       </div>
       <div class="ml-3">
         <p class="text-sm font-medium text-gray-900">
-          <a href="#">
-            <%= update.project.name %>
-          </a>
+          <%= update.project.name %>
         </p>
         <div class="flex space-x-1 text-sm text-gray-500">
           <time datetime="2020-03-16">
