--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,5 @@
+<% title "Projects" %>
+
 <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
   <h1 class="text-4xl font-bold text-gray-900">Projects</h1>
 </div>
