--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,5 @@
+<% title @project.name %>
+
 <div class="max-w-3xl mx-auto px-4 sm:px-6 md:flex md:items-center md:justify-between md:space-x-5 lg:max-w-7xl lg:px-8">
   <div class="flex items-center space-x-5">
     <div class="flex-shrink-0">
