--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -41,39 +41,88 @@
   </div>
 </div>
 
-<div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8 my-4">
-<% @project.updates.each do |update| %>
-<div class="mt-0 grid gap-16 pt-12">
-  <div>
-    <div>
-        <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-indigo-100 text-indigo-800">
-          <%= update.category %>
-        </span>
-    </div>
-    <div class="block mt-4">
-      <p class="text-xl font-semibold text-gray-900">
-        <%= update.title %>
-      </p>
-      <p class="mt-3 text-base text-gray-500">
-        <%= update.body %>
-      </p>
-    </div>
-    <div class="mt-6 flex items-center">
-      <div class="flex-shrink-0">
-        <%= image_tag update.project.image_avatar_url, class: 'h-10 w-10 rounded-full' %>
-      </div>
-      <div class="ml-3">
-        <p class="text-sm font-medium text-gray-900">
-          <%= update.project.name %>
-        </p>
-        <div class="flex space-x-1 text-sm text-gray-500">
-          <time datetime="2020-03-16">
-            <%= update.publish_at %>
-          </time>
+<div class="mt-8 max-w-3xl mx-auto grid grid-cols-1 gap-6 sm:px-6 lg:max-w-7xl lg:grid-flow-col-dense lg:grid-cols-3">
+  <div class="space-y-6 lg:col-start-1 lg:col-span-2">
+    <!-- Description list-->
+    <section aria-labelledby="applicant-information-title">
+      <div class="bg-white shadow sm:rounded-lg">
+        <div class="px-4 py-5 sm:px-6">
+          <h2 id="applicant-information-title" class="text-3xl leading-6 font-bold text-gray-900">
+            Updates
+          </h2>
+        </div>
+        <div class="border-t border-gray-200 px-12 py-6 sm:px-6">
+          <% @project.updates.each do |update| %>
+          <div class="mt-0 grid gap-16">
+            <div>
+              <div>
+                  <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-indigo-100 text-indigo-800">
+                    <%= update.category %>
+                  </span>
+              </div>
+              <div class="block mt-4">
+                <p class="text-xl font-semibold text-gray-900">
+                  <%= link_to update.title, project_update_path(update.project.slug, update.id) %>
+                </p>
+                <p class="mt-3 text-base text-gray-500">
+                  <%= update.body %>
+                </p>
+              </div>
+              <div class="mt-6 flex items-center">
+                <div class="flex-shrink-0">
+                  <%= image_tag update.project.image_avatar_url, class: 'h-10 w-10 rounded-full' %>
+                </div>
+                <div class="ml-3">
+                  <p class="text-sm font-medium text-gray-900">
+                    <%= update.project.name %>
+                  </p>
+                  <div class="flex space-x-1 text-sm text-gray-500">
+                    <time datetime="2020-03-16">
+                      <%= update.publish_at %>
+                    </time>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <% end %>
+
+
         </div>
       </div>
-    </div>
+    </section>
   </div>
-</div>
-<% end %>
+
+  <section aria-labelledby="timeline-title" class="lg:col-start-3 lg:col-span-1">
+    <div class="bg-white px-4 py-5 shadow sm:rounded-lg sm:px-6">
+      <h2 id="timeline-title" class="text-xl font-medium text-gray-900">Team</h2>
+
+      <div class="mt-2 flow-root">
+        <ul role="list" class="divide-y divide-gray-200">
+        <% @project.wallets.each do |wallet| %>
+          <li class="py-4">
+            <div class="flex items-center space-x-4">
+              <div class="flex-shrink-0">
+                <div class="h-10 w-10 rounded-full bg-blue-500"></div>
+              </div>
+              <div class="flex-1 min-w-0">
+                <p class="text-sm font-medium text-gray-900 truncate">
+                  ...
+                </p>
+                <p class="text-sm text-gray-500 truncate">
+                  <%= wallet.address.truncate(12, omission: "...#{wallet.address.last(4)}") %>
+                </p>
+              </div>
+              <div>
+                <p class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800">
+                  Owner
+                </p>
+              </div>
+            </div>
+          </li>
+        <% end %>
+        </ul>
+      </div>
+    </div>
+  </section>
 </div>
