Follow button styling

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -22,7 +22,7 @@
       <div>
         <div class="-mt-px flex divide-x divide-gray-200">
           <div class="w-0 flex-1 flex">
-            <a href="mailto:janecooper@example.com" class="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500">
+            <a href="#" class="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500">
               <i class="fa-duotone fa-circle-heart w-5 h-5 text-gray-400"></i>
               <span class="ml-3">Follow</span>
             </a>
