--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,29 +54,13 @@
                   <i class="fa-duotone fa-bullhorn mr-4 flex-shrink-0 h-6 w-6 text-blue-300"></i>
                   Updates
                 <% end %>
-
+                <% if @current_wallet %>
                 <%= link_to(new_update_path, class: 'text-white hover:bg-blue-600 hover:bg-opacity-75 group flex items-center px-2 py-2 text-base font-medium rounded-md') do %>
                   <i class="fa-duotone fa-circle-plus mr-4 flex-shrink-0 h-6 w-6 text-blue-300"></i>
                   Submit Update
                 <% end %>
+                <% end %>
               </nav>
-            </div>
-            <div class="flex-shrink-0 flex border-t border-blue-800 p-4">
-              <a href="#" class="flex-shrink-0 group block">
-                <div class="flex items-center">
-                  <div>
-                    <img class="inline-block h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
-                  </div>
-                  <div class="ml-3">
-                    <p class="text-base font-medium text-white">
-                      Tom Cook
-                    </p>
-                    <p class="text-sm font-medium text-blue-200 group-hover:text-white">
-                      View profile
-                    </p>
-                  </div>
-                </div>
-              </a>
             </div>
           </div>
 
@@ -110,9 +94,11 @@
                   Updates
                 <% end %>
 
+                <% if @current_wallet %>
                 <%= link_to(new_update_path, class: 'text-white hover:bg-blue-600 hover:bg-opacity-75 group flex items-center px-2 py-2 text-sm font-medium rounded-md') do %>
                   <i class="fa-duotone fa-circle-plus mr-4 flex-shrink-0 h-6 w-6 text-blue-300"></i>
                   Submit Update
+                <% end %>
                 <% end %>
               </nav>
             </div>
