--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -22,10 +22,17 @@
       <div>
         <div class="-mt-px flex divide-x divide-gray-200">
           <div class="w-0 flex-1 flex">
-            <a href="#" class="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500">
+          <% if @current_wallet and @current_wallet.follows.where(project: project).present? %>
+            <%= link_to unfollow_project_path(project.slug), class: 'relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500' do %>
+              <i class="fa-duotone fa-circle-heart w-5 h-5 text-red-500"></i>
+              <span class="ml-2 text-red-500">Following</span>
+            <% end %>
+          <% else %>
+            <%= link_to follow_project_path(project.slug), class: 'relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500' do %>
               <i class="fa-duotone fa-circle-heart w-5 h-5 text-gray-400"></i>
-              <span class="ml-3">Follow</span>
-            </a>
+              <span class="ml-2">Follow</span>
+            <% end %>
+          <% end %>
           </div>
         </div>
       </div>
