--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -54,17 +54,16 @@
 
 <div class="mt-8 max-w-3xl mx-auto grid grid-cols-1 gap-6 sm:px-6 lg:max-w-7xl lg:grid-flow-col-dense lg:grid-cols-3">
   <div class="space-y-6 lg:col-start-1 lg:col-span-2">
-    <!-- Description list-->
-    <section aria-labelledby="applicant-information-title">
+    <section>
       <div class="bg-white shadow sm:rounded-lg">
         <div class="px-4 py-5 sm:px-6">
-          <h2 id="applicant-information-title" class="text-3xl leading-6 font-bold text-gray-900">
+          <h2 class="text-3xl leading-6 font-bold text-gray-900">
             Updates
           </h2>
         </div>
         <div class="border-t border-gray-200 px-12 py-6 sm:px-6">
           <% @project.updates.each do |update| %>
-          <div class="mt-0 grid gap-16">
+          <div class="mt-0 mb-10 grid gap-16">
             <div>
               <div>
                   <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-indigo-100 text-indigo-800">
@@ -97,8 +96,6 @@
             </div>
           </div>
           <% end %>
-
-
         </div>
       </div>
     </section>
