--- a/app/views/updates/index.html.erb
+++ b/app/views/updates/index.html.erb
@@ -5,42 +5,48 @@
 </div>
 <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8 my-4">
 
-  <% @updates.each do |update| %>
-  <div class="mt-0 grid gap-16 pt-12">
-    <div>
-      <div>
-        <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-indigo-100 text-indigo-800">
-          <%= update.category %>
-        </span>
-      </div>
-      <%= link_to project_path(update.project.slug), class: 'block mt-4' do %>
-        <p class="text-xl font-semibold text-gray-900">
-          <%= update.title %>
-        </p>
-        <p class="mt-3 text-base text-gray-500">
-          <%= update.body %>
-        </p>
-      <% end %>
-      <div class="mt-6 flex items-center">
-        <div class="flex-shrink-0">
-          <%= link_to project_path(update.project.slug) do %>
-            <%= image_tag update.project.image_avatar_url, class: 'h-10 w-10 rounded-full' %>
-          <% end %>
-        </div>
-        <div class="ml-3">
-          <p class="text-sm font-medium text-gray-900">
-            <%= link_to update.project.name, project_path(update.project.slug) %>
-          </p>
-          <div class="flex space-x-1 text-sm text-gray-500">
-            <time datetime="2020-03-16">
-              <%= update.publish_at %>
-            </time>
+
+  <div class="space-y-6 lg:col-start-1 lg:col-span-2">
+    <section>
+      <% @updates.each do |update| %>
+      <div class="bg-white shadow sm:rounded-lg mb-6">
+        <div class="px-12 py-6 sm:px-6">
+          <div class="mt-0 grid gap-16">
+            <div>
+              <div>
+                  <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-indigo-100 text-indigo-800">
+                    <%= update.category %>
+                  </span>
+              </div>
+              <div class="block mt-4">
+                <p class="text-xl font-semibold text-gray-900">
+                  <%= link_to update.title, project_update_path(update.project.slug, update.id) %>
+                </p>
+                <p class="mt-3 text-base text-gray-500">
+                  <%= update.body %>
+                </p>
+              </div>
+              <div class="mt-6 flex items-center">
+                <div class="flex-shrink-0">
+                  <%= image_tag update.project.image_avatar_url, class: 'h-10 w-10 rounded-full' %>
+                </div>
+                <div class="ml-3">
+                  <p class="text-sm font-medium text-gray-900">
+                    <%= update.project.name %>
+                  </p>
+                  <div class="flex space-x-1 text-sm text-gray-500">
+                    <time datetime="2020-03-16">
+                      <%= update.publish_at %>
+                    </time>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+      <% end %>
+    </section>
   </div>
-  <% end %>
-  
 
 </div>
