--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,20 +113,21 @@
                 <% end %>
               </nav>
             </div>
-            <div data-controller="wallet" data-wallet-target="container" class="hidden flex-shrink-0 flex border-t border-blue-800 p-4">
+            <div class="flex-shrink-0 flex border-t border-blue-800 p-4">
               <div class="flex-shrink-0 w-full group block">
                 <div class="flex items-center">
-
-                  <button data-wallet-target="connectButton" data-action="click->wallet#connectWallet" type="button" class="relative w-full items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-green-500 hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
-                    Connect Wallet
-                  </button>
-
-                  <div data-wallet-target="wallet" class="hidden flex items-center gap-3">
-                    <div class="h-9 w-9 rounded-full bg-white"></div>
-                    <p class="text-lg font-medium text-white">
-                      <span data-wallet-target="walletAddress"></span>
-                    </p>
-                  </div>
+                  <% if session[:wallet] %>
+                    <div class="flex items-center gap-3">
+                      <div class="h-9 w-9 rounded-full bg-white"></div>
+                      <p class="text-lg font-medium text-white">
+                        <%= render partial: "shared/address", locals: {address: session[:wallet]} %>
+                      </p>
+                    </div>
+                  <% else %>
+                    <button data-controller="wallet" data-action="click->wallet#connectWallet" data-wallet-csrf-value="<%= session[:_csrf_token] %>" type="button" class="relative w-full items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-green-500 hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
+                      Connect wallet
+                    </button>
+                  <% end %>
                 </div>
               </div>
             </div>
